JCL-141: Simplify solid module interfaces