@@ -1,16 +1,16 @@
 /*
  * Copyright 2022 Inrupt Inc.
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal in
  * the Software without restriction, including without limitation the rights to use,
  * copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
  * Software, and to permit persons to whom the Software is furnished to do so,
  * subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
  * INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  * PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
@@ -24,7 +24,11 @@ import static com.github.tomakehurst.wiremock.client.WireMock.*;
 
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.core.WireMockConfiguration;
+import com.inrupt.client.Headers.Link;
+import com.inrupt.client.vocabulary.LDP;
 
+import java.net.URI;
+import java.util.Collections;
 import java.util.Map;
 
 public class SolidMockHttpService {
@@ -40,17 +44,18 @@ public class SolidMockHttpService {
     }
 
     private void setupMocks() {
-        wireMockServer.stubFor(get(urlEqualTo("/solid"))
+        wireMockServer.stubFor(get(urlEqualTo("/solid/"))
             .willReturn(aResponse()
                 .withStatus(200)
                 .withHeader("Content-Type", "text/turtle")
-                .withHeader("Link", "<http://www.w3.org/ns/ldp#Container>; rel=\"type\"")
-                .withHeader("Link", "<http://storage/example>; rel=\"http://www.w3.org/ns/pim/space#storage\"")
+                .withHeader("Link", Link.of(LDP.BasicContainer, "type").toString())
+                .withHeader("Link", Link.of(URI.create("http://storage.example/"),
+                        "http://www.w3.org/ns/pim/space#storage").toString())
                 .withHeader("WAC-Allow", "user=\"read write\",public=\"read\"")
                 .withHeader("Allow", "POST, PUT, PATCH")
-                .withHeader("Accept-Post", "application/example, text/example")
-                .withHeader("Accept-Patch", "application/example, text/example")
-                .withHeader("Accept-Put", "application/example, text/example")
+                .withHeader("Accept-Post", "application/ld+json, text/turtle")
+                .withHeader("Accept-Put", "application/ld+json, text/turtle")
+                .withHeader("Accept-Patch", "application/sparql-update, text/n3")
                 .withBodyFile("solidResourceExample.ttl")
             )
         );
@@ -61,11 +66,10 @@ public class SolidMockHttpService {
 
         setupMocks();
 
-        return Map.of("solid_resource_uri", wireMockServer.baseUrl());
+        return Collections.singletonMap("solid_resource_uri", wireMockServer.baseUrl());
     }
 
     public void stop() {
         wireMockServer.stop();
     }
-
 }
